[gd_scene load_steps=3 format=3 uid="uid://bmq7mxulsiifi"]

[ext_resource type="FontFile" uid="uid://cu1gycbn7rgh1" path="res://fonts/ka1.ttf" id="1_13ykg"]
[ext_resource type="Script" path="res://game_slots/game_slot.gd" id="1_h4op5"]

[node name="GameSlot" type="HBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_h4op5")

[node name="EmptySlot" type="Button" parent="."]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="EmptySlot"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 0
offset_right = 68.0
offset_bottom = 22.0

[node name="Label" type="Label" parent="EmptySlot/CenterContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_13ykg")
text = "Empty"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Slot" type="Button" parent="."]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Slot"]
layout_mode = 0
offset_right = 222.0
offset_bottom = 58.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Slot/MarginContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="Slot/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_13ykg")
text = "Game name"

[node name="Date" type="Label" parent="Slot/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_13ykg")
text = "2023-11-30 12:00:00"

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="Erase" type="Button" parent="CenterContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_13ykg")
text = "Erase game"

[connection signal="pressed" from="EmptySlot" to="." method="_on_empty_slot_pressed"]
[connection signal="pressed" from="Slot" to="." method="_on_slot_pressed"]
[connection signal="pressed" from="CenterContainer/Erase" to="." method="_on_erase_pressed"]
